--- a/public/global.css
+++ b/public/global.css
@@ -1,28 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 html, body {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
 
-body {
-	color: #333;
+* {
 	margin: 0;
-	padding: 8px;
+	padding: 0;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+}
+
+body {
+	background-color: #101010;
+	font-family: 'Roboto', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	color: #fcfcfc;
 }
 
 a {
-	color: rgb(0,100,200);
-	text-decoration: none;
-}
-
-a:hover {
+	color: dodgerblue;
 	text-decoration: underline;
 }
 
-a:visited {
-	color: rgb(0,80,160);
+a:hover {
+	text-decoration: none;
 }
 
 label {
